# emojicode-sha

./: CMakeLists.txt  default.nix  result
include/: String.h  sha512.cpp  sha512.h
src/: sha.cpp  sha.emojic
